--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,6 +1,49 @@
-h1 {
-  font-family: "Playfair Display", serif;
+:root {
+  --primary-color: #f9f7fe;
+  --secondary-color: #6c63ff;
+  --text-color: #272142;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
 }
-p {
-  font-family: "Poppins", sans-serif;
+body {
+  font-family: var(--default-font-family);
+  color: var(--text-color);
+}
+h1,
+h2,
+h3 {
+  font-family: var(--heading-font-family);
+  margin: 0;
+  padding: 0;
+}
+h6 {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
+}
+.hero {
+  text-align: center;
+  background-color: var(--primary-color);
+  padding: 160px 0;
+}
+.hero h1 {
+  font-size: 96px;
+  font-weight: 700;
+  line-height: 128px;
+  color: black;
+}
+.hero p {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 54px;
+  margin: 0;
+  padding: 0;
+}
+.btn-main {
+  background-color: var(--secondary-color);
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  border-radius: 4px;
+  padding: 18px 30px;
 }
