--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -13,29 +13,27 @@ h1,
 h2,
 h3 {
   font-family: var(--heading-font-family);
-  margin: 0;
-  padding: 0;
 }
 h6 {
   font-size: 24px;
   font-weight: 400;
-  line-height: 36px;
+  line-height: 1.5;
 }
 .hero {
   text-align: center;
   background-color: var(--primary-color);
-  padding: 160px 0;
+  padding: 80px 30px;
 }
 .hero h1 {
   font-size: 96px;
   font-weight: 700;
-  line-height: 128px;
+  line-height: 1.5;
   color: black;
 }
 .hero p {
   font-size: 36px;
   font-weight: 700;
-  line-height: 54px;
+  line-height: 1.5;
   margin: 0;
   padding: 0;
 }
@@ -43,7 +41,85 @@ h6 {
   background-color: var(--secondary-color);
   color: white;
   font-size: 18px;
-  line-height: 27px;
+  line-height: 1.5;
   border-radius: 4px;
-  padding: 18px 30px;
+  padding: 20px 30px;
+  margin: 25px;
+}
+.btn-main:hover {
+  background-color: var(--secondary-color);
+  color: white;
+}
+
+.btn-secondary {
+  border: 2px solid var(--secondary-color);
+  background: white;
+  color: var(--secondary-color);
+  font-size: 18px;
+  line-height: 1.5;
+  border-radius: 4px;
+  padding: 19px 29px;
+  margin: 25px;
+}
+.btn-secondary:hover {
+  border-color: var(--secondary-color);
+  background: white;
+  color: var(--secondary-color);
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+footer p {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 500;
+  color: black;
+}
+.media-links {
+  display: flex;
+  justify-content: center;
+}
+.media-links div a {
+  font-size: 18px;
+  background: var(--primary-color);
+  border-radius: 50%;
+  padding: 4px 10px;
+  color: var(--secondary-color);
+  margin: 10px;
+}
+@media (max-width: 576px) {
+  h6 {
+    font-size: 20px;
+  }
+  .hero p {
+    font-size: 20px;
+  }
+  .hero h1 {
+    font-size: 55px;
+  }
+  .btn-main {
+    font-size: 15px;
+    padding: 20px 25px;
+    margin: 10px;
+  }
+  .btn-secondary {
+    font-size: 15px;
+    padding: 19px 15px;
+    margin: 10px;
+  }
+
+  footer {
+    margin: 10px;
+  }
+  footer p {
+    text-align: center;
+    font-size: 16px;
+  }
+}
+@media (max-width: 900px) {
+  .hero h1 {
+    font-size: 75px;
+  }
 }
