--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -32,15 +32,6 @@ h4 {
   text-align: center;
   color: black;
 }
-.img1 {
-  flex: 1.0457;
-}
-.img2 {
-  flex: 1.8486;
-}
-.img3 {
-  flex: 1.4771;
-}
 .hero {
   text-align: center;
   background-color: var(--primary-color);
@@ -166,13 +157,20 @@ footer p {
     padding: 20px 15px;
     margin: 10px;
   }
-
+  .btn-small-dark {
+    font-size: 12px;
+    padding: 20px 15px;
+    margin: 25px 0;
+  }
   footer {
     margin: 10px;
   }
   footer p {
     text-align: center;
     font-size: 16px;
+  }
+  .work-inquiry p {
+    font-size: 12px;
   }
 }
 @media (max-width: 900px) {
