--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -20,11 +20,15 @@ h6 {
   font-weight: 400;
   line-height: 1.5;
 }
-img {
+.homepage img {
   padding: 20px 30px;
   background-color: var(--primary-color);
   border-radius: 20px;
   box-shadow: var(--shadow);
+}
+.projects img {
+  padding: 40px;
+  background-color: var(--primary-color);
 }
 h4 {
   font-size: 20px;
@@ -37,11 +41,15 @@ h4 {
   background-color: var(--primary-color);
   padding: 80px 30px;
 }
-.hero h1 {
+h1 {
   font-size: 96px;
   font-weight: 700;
   line-height: 1.5;
   color: black;
+}
+h2 {
+  font-size: 64px;
+  line-height: 1.5;
 }
 .hero p {
   font-size: 36px;
@@ -77,6 +85,20 @@ h4 {
   background-color: var(--secondary-color);
   color: white;
 }
+.btn-small-light {
+  background-color: white;
+  color: var(--secondary-color);
+  border: 2px solid var(--secondary-color);
+  font-size: 16px;
+  line-height: 1.5;
+  border-radius: 4px;
+  padding: 15px 25px;
+}
+.btn-small-light:hover {
+  border-color: var(--secondary-color);
+  background: white;
+  color: var(--secondary-color);
+}
 
 .btn-secondary {
   border: 2px solid var(--secondary-color);
@@ -93,11 +115,19 @@ h4 {
   background: white;
   color: var(--secondary-color);
 }
-.container p {
+.work-inquiry-button {
+  margin: 25px;
+}
+.homepage p {
   text-align: center;
   opacity: 70%;
   font-size: 14px;
   font-weight: 400;
+}
+.projects p {
+  font-size: 16px;
+  line-height: 1.8;
+  opacity: 70%;
 }
 .buttons {
   display: flex;
@@ -136,6 +166,7 @@ footer p {
 .work-inquiry-button {
   position: relative;
   top: -20px;
+  margin: 25px 0;
 }
 @media (max-width: 576px) {
   h6 {
@@ -144,7 +175,7 @@ footer p {
   .hero p {
     font-size: 20px;
   }
-  .hero h1 {
+  h1 {
     font-size: 55px;
   }
   .btn-main {
@@ -160,7 +191,6 @@ footer p {
   .btn-small-dark {
     font-size: 12px;
     padding: 20px 15px;
-    margin: 25px 0;
   }
   footer {
     margin: 10px;
@@ -173,8 +203,24 @@ footer p {
     font-size: 12px;
   }
 }
+@media (max-width: 768px) {
+  .projects p,
+  .projects h2 {
+    text-align: center;
+  }
+  .projects a {
+    display: block;
+    text-align: center;
+  }
+  .projects p {
+    margin: 0 10px 30px;
+  }
+  .work-inquiry {
+    padding: 30px 10px 0;
+  }
+}
 @media (max-width: 900px) {
-  .hero h1 {
+  h1 {
     font-size: 75px;
   }
   h6 {
