Adjusted buttons in project page when responsive

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -211,6 +211,7 @@ footer p {
   .projects a {
     display: block;
     text-align: center;
+    margin: 20px 50px;
   }
   .projects p {
     margin: 0 10px 30px;
