--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -82,8 +82,9 @@ h2 {
   margin: 25px;
 }
 .btn-small-dark:hover {
-  background-color: var(--secondary-color);
-  color: white;
+  border: 2px solid var(--secondary-color);
+  background: white;
+  color: var(--secondary-color);
 }
 .btn-small-light {
   background-color: white;
@@ -95,9 +96,8 @@ h2 {
   padding: 15px 25px;
 }
 .btn-small-light:hover {
-  border-color: var(--secondary-color);
-  background: white;
-  color: var(--secondary-color);
+  background-color: var(--secondary-color);
+  color: white;
 }
 
 .btn-secondary {
