--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -178,7 +178,8 @@ footer p {
 }
 .about-section h1 {
   font-size: 64px;
-  line-height: 1.5;
+  line-height: 1.2;
+  margin-bottom: 30px;
 }
 .about-section h2 {
   font-size: 18px;
@@ -223,6 +224,7 @@ footer p {
   }
   h1 {
     font-size: 55px;
+    line-height: 1;
   }
   .btn-main {
     font-size: 15px;
@@ -250,10 +252,21 @@ footer p {
   }
   .about-section h1,
   .about-section h2 {
-    text-align: center;
+    line-height: 1;
+  }
+  .about-section h1 {
+    font-size: 44px;
+    margin-bottom: 20px;
+  }
+  .about-section h5 {
+    font-size: 16px;
   }
 }
 @media (max-width: 768px) {
+  h1 {
+    line-height: 90px;
+    font-size: 35px;
+  }
   .projects p,
   .projects h2 {
     text-align: center;
