--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -106,6 +106,7 @@ p {
   justify-content: space-between;
   padding: 50px 30px 20px;
   background: var(--primary-color);
+  border-radius: 4px;
 }
 .work-inquiry-button {
   position: relative;
